# contractlens

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  dev-logs.sh  dev-start.sh  dev-stop.sh  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  comparison.py  dependencies.py  documents.py  schemas.py  search.py
backend/app/core/: auth.py  clause_taxonomy.py  config.py  constants.py  database.py  exceptions.py  middleware.py  security.py  supabase.py
backend/app/models/: __init__.py  base.py  clause.py  document.py  document_version.py  user.py
backend/app/services/: __init__.py  chunking_service.py  classification_service.py  comparison_service.py  docling_extraction_service.py  document_service.py  embedding_service.py  extraction_service.py  risk_scoring.py  search_service.py  section_chunking_service.py
backend/app/workers/: __init__.py  document_processor.py
backend/config/: clause_types.yaml
backend/migrations/: 001_initial_schema.sql  002_add_document_processing_columns.sql  003_use_hnsw_vector_index.sql  004_add_clause_recommendations.sql  005_add_classification_failed.sql  006_expand_clause_type_check.sql
backend/scripts/: bulk_reprocess.py
backend/tests/: conftest.py  test_api_comparison.py  test_api_documents.py  test_api_search.py  test_auth.py
docs/: V2_ROADMAP.md  architecture.md  roadmap-v2.md
frontend/: .env.example  .eslintrc.json  .gitkeep  .prettierrc  Dockerfile  README.md  next.config.mjs  package-lock.json  (+4 more)
(+48 files in other folders)
